Fix alignemt

--- a/style.css
+++ b/style.css
@@ -116,12 +116,13 @@ li{
     /* border-radius: 60px; */
     background-color: #FFFBF8;
     border: 1.5px solid #FC0042;
-    width: 300px;
+    /* width: 300px; */
     font-family: 'PPRightGrotesk-SpatialFine';
     font-size: 24px;
     color:#FC0042;
     padding: 13px;
     text-decoration: none;
+    margin: 10px;
 }
 
 /* About Section */
@@ -337,4 +338,10 @@ footer {
     padding: 1rem 0;
     margin-top: 2rem;
     font-family: 'PPRightGrotesk-SpatialFine';
+}
+
+.contactSection {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
